@@ -109,19 +109,17 @@ event_new (const void *parent,
 		return NULL;
 	}
 
-	event->args = nih_alloc (event, sizeof (char *));
+	event->args = nih_str_array_new (event);
 	if (! event->args) {
 		nih_free (event);
 		return NULL;
 	}
-	event->args[0] = NULL;
 
-	event->env = nih_alloc (event, sizeof (char *));
+	event->env = nih_str_array_new (event);
 	if (! event->env) {
 		nih_free (event);
 		return NULL;
 	}
-	event->env[0] = NULL;
 
 	return event;
 }
